<resources>
    <string name="app_name">Noticer</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>
    <string name="total_expenses">Total expenses:</string>
    <string name="title_activity_add">Add expenses</string>
    <string name="occasion">Occasion</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="done">Done</string>
    <string name="remove">Remove selected</string>
    <string name="appearance">Appearance</string>
    <string name="notification_title">Register your expenses</string>
    <string name="notification_message">It\'s time to register your daily expenses!</string>
    <string name="title_activity_date">Choose a date</string>
    <string name="empty_field_error">This field cannot be empty</string>
    <string name="not_a_number_error">Please enter a valid number</string>
    <string name="accuracy_preference_summary">The amount of decimal places that should be displayed</string>
    <string name="accuracy_preference_title">Accuracy</string>
    <string name="alarm_preference_summary">Choose at what time Noticer sends a notification
    to remind you.</string>
    <string name="alarm_preference_title">Alarm time</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notifications_enabled_preference_title">Enable reminder notifications?</string>
    <string name="notifications_enabled_preference_summary">Enable this setting to receive
    notifications at a specific time every day reminding you to fill in your daily expenses.</string>
    <string name="notifications">Notifications</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_about">About</string>
    <string name="developer">Created by:</string>
    <string name="developer_value">ABYX Inc.</string>
    <string name="website">Website:</string>
    <string name="website_value">http://abyx.be</string>
    <string name="version">Version:</string>
    <string name="about">About</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_all_message">Are you sure you wan\'t to remove all saved data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="sort_by_date_title">Sort by date</string>
    <string name="sort_by_date_summary">Sort all expenses by date instead of location.</string>
    <string name="sort">Sort</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_title">Edit</string>
</resources>
