<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.abyx.loyalty.AboutActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/app_name"
        android:paddingBottom="10dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_weight="4"
                android:text="@string/developer"/>
            <TextView
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:text="@string/developer_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_weight="4"
                android:text="@string/website"/>
            <TextView
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:autoLink="web"
                android:text="@string/website_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_weight="4"
                android:text="@string/version"/>
            <TextView
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:id="@+id/versionField"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
